--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <title>React App</title>
   </head>
-  <body>
+  <body style="font-family: Raleway">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
