--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./main.css">
     <title>React App</title>
   </head>
-  <body style="font-family: Raleway">
+  <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
