--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,9 @@
     -->
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./main.css">
-    <title>React App</title>
+    <title>Something2Watch</title>
+    <meta name="title" content=”Something2Watch”>
+    <meta name=”description” content=”Find something to watch based on a film or tv show that you liked before!”>
   </head>
   <body>
     <noscript>
