--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+
+    <!-- For Facebook -->
+    <meta property="og:title" content="Something2Watch" />
+    <meta property="og:type" content="website" />
+    <!-- <meta property="og:image" content="" /> -->
+    <meta property="og:url" content="https://www.something2watch.com" />
+    <meta property="og:description" content="Find something to watch based on a film or tv show that you liked before!" />
+
+    <!-- For Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Something2Watch" />
+    <meta name="twitter:description" content="Find something to watch based on a film or tv show that you liked before!" />
+    <!-- <meta name="twitter:image" content="" /> -->
+    
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -22,8 +36,6 @@
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./main.css">
     <title>Something2Watch</title>
-    <meta name="title" content=”Something2Watch”>
-    <meta name=”description” content=”Find something to watch based on a film or tv show that you liked before!”>
   </head>
   <body>
     <noscript>
